----------------------------------------------------------------------
 OmegaT x.x.x Changes
----------------------------------------------------------------------

x.x.x vs. 1.7.2


  12 Enhancements
   3 Bugfixes

----------------------------------------------------------------------
x.x.x

  Implemented requests:
  
  - Editor window name
  http://sourceforge.net/support/tracker.php?aid=1764103

  - Tool: Spellchecker
  http://sourceforge.net/support/tracker.php?aid=991510 

  - Letter case change in editing field 
  http://sourceforge.net/support/tracker.php?aid=1386063  

  - Display source segments 
  http://sourceforge.net/support/tracker.php?aid=1805172   

  - Mark translated segments 
  http://sourceforge.net/support/tracker.php?aid=1805173 

  - Mark untranslated segments   
  http://sourceforge.net/support/tracker.php?aid=1809004

  - Navigation history  
  http://sourceforge.net/support/tracker.php?aid=1805175     

  - HTML, skip extraction of messages matching regxep
  http://sourceforge.net/support/tracker.php?aid=1787085     

  - (X)HTML filter: do not translate input VALUE attribute
  http://sourceforge.net/support/tracker.php?aid=1787153     

  - Select elements to translate in office documents
  http://sourceforge.net/support/tracker.php?aid=1812565   

  Other enhancements:
  - Catalan localisation updated to 1.7.2
  - Belarusian UI updated to 1.7.+

  Bug fixes:
  
  - HTML filter loses html-encoded characters if not supported
  http://sourceforge.net/support/tracker.php?aid=1800677

  - <context> should be ignored in XLIFF files  
  http://sourceforge.net/support/tracker.php?aid=1802000

  - Properties: space before "=" shouldn't be part of the key  
  http://sourceforge.net/support/tracker.php?aid=1812183

----------------------------------------------------------------------
 OmegaT 1.7.2 Changes
----------------------------------------------------------------------

1.7.2 vs. 1.7.1


  11 Enhancements
   7 Bugfixes
