@@ -4,7 +4,7 @@
 #          glossaries, and translation leveraging into updated projects.
 #
 # Copyright (C) 2000-2006 Keith Godfrey, Maxym Mykhalchuk, and Henry Pijffers
-# Portions copyright 2007 - Zoltan Bartko - bartkozoltan@bartkozoltan.com
+#               2007 - Zoltan Bartko - bartkozoltan@bartkozoltan.com
 #               Home page: http://www.omegat.org/omegat/omegat.html
 #               Support center: http://groups.yahoo.com/group/OmegaT/
 #
@@ -30,6 +30,7 @@
 #  @author Henry Pijffers
 #  @author Didier Briel
 #  @author Jean-Christophe Helary
+#  @author Zoltan Bartko
 #
 #  @version 1.7.1
 #
@@ -1123,3 +1124,10 @@ MW_VIEW_MENU=&View
 
 MW_VIEW_MENU_DISPLAY_SEGMENT_SOURCES=Display &source segments
 
+# matches text area popup menu
+
+MATCHES_GO_TO_SEGMENT_SOURCE=Go to segment source
+
+MATCHES_INSERT=Insert match into translation
+
+MATCHES_REPLACE=Replace translation with match
